--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">movie night</string>
+    <string name="app_name">Movie night</string>
     <string name="movie_title">Title</string>
     <string name="category">Category: </string>
     <string name="overview">Overview: </string>
