apply data binding to the whole project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="quote">Quote:</string>
     <string name="adult">watching under parents supervision!</string>
     <string name="family">family movie</string>
+    <string name="default_image">jorgjEk6a0bed6jdR5wu4S6ZvRm.jpg</string>
 </resources>
