Build one-to-one chat instead of group chat 	integrate with Firebase FCM 	sending and recieving notification 	handling FCM notifications in background and foreground

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="user_name">user name</string>
     <string name="sned">sned</string>
     <string name="logout">Logout</string>
+    <string name="username">UserName</string>
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+
 </resources>
