--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="logout">Logout</string>
     <string name="username">UserName</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
-
+    <string name="error_rating">your rate must be within 0.5 to 10.0</string>
+    <string name="submit_rating_msg">Your rating has been submitted successfully</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
